k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeep-backend
  labels:
    app: gatekeep-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gatekeep-backend
  template:
    metadata:
      labels:
        app: gatekeep-backend
    spec:
      containers:
        - name: backend
          image: mangeshforstudy/gatekeep-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: gatekeep-backend-service
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: gatekeep-backend
